--- a/android/.gitlab-ci-android.yml
+++ b/android/.gitlab-ci-android.yml
@@ -36,6 +36,6 @@ stages:
   #  - test
   - deploy
 include:
-#  - '/android/.gitlab-ci-fwk.yml'
+  - '/android/.gitlab-ci-fwk.yml'
   - '/android/.gitlab-ci-myhome.yml'
-#  - '/android/.gitlab-ci-hotel.yml'
+  - '/android/.gitlab-ci-hotel.yml'
