--- a/android/.gitlab-ci-myhome.yml
+++ b/android/.gitlab-ci-myhome.yml
@@ -16,13 +16,13 @@ home-myhome-build:
 #  script:
 #    - ./gradlew :components:home-module:myhome:lintInhouse
 
-home-myhome-deploy:
-  only:
-    changes:
-      - android/components/home-module/myhome/**/*
-  stage: deploy
-  script:
-    - ./gradlew :components:home-module:myhome:publishAarPublicationToMavenCentralRepository #发布到远程仓库
+#home-myhome-deploy:
+#  only:
+#    changes:
+#      - android/components/home-module/myhome/**/*
+#  stage: deploy
+#  script:
+#    - ./gradlew :components:home-module:myhome:publishAarPublicationToMavenCentralRepository #发布到远程仓库
 
 ## ========================
 #home-daily-check1:
