--- a/android/.gitlab-ci-android.yml
+++ b/android/.gitlab-ci-android.yml
@@ -39,3 +39,4 @@ include:
   - '/android/.gitlab-ci-fwk.yml'
   - '/android/.gitlab-ci-myhome.yml'
   - '/android/.gitlab-ci-hotel.yml'
+  - '/android/.gitlab-ci-account.yml'
