--- a/android/.gitlab-ci-myhome.yml
+++ b/android/.gitlab-ci-myhome.yml
@@ -32,7 +32,7 @@ home-daily-check1:
       - android/components/home-module/**/*
   stage: build
   script:
-    - ./gradlew includeSourceModule  -PmoduleList=home-myhome
+    - ./gradlew includeSourceModule  -PmoduleList=home-myhome,home-main
     - ./gradlew :components:home-module:main:fileCounter
 home-daily-check2:
   only:
